# Sql-parser

./: .gitignore  CMakeLists.txt  README.md
include/binder/: catalog.h  types.h
include/parser/: ast.h  lexer.h  parser.h  token.h
src/: main.cpp
src/binder/: types.cpp
src/parser/: ast.cpp  lexer.cpp  parser.cpp
tests/: CMakeLists.txt  lexer_test.cpp
